Second day of work in the front end

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,15 @@ layout: default
 
 
 <div class="step" data-x="0" data-y="0" id="step-1">
-  dropdown menu
+    Select Report By Month:
+    
+    <div>
+      <select>
+        <option>test</option>
+        <option>test 2</option>
+      </select>
+    </div>
+
 </div>
 
 <div class="step" data-x="2000" data-y="0" id="step-2">
@@ -12,28 +20,11 @@ layout: default
 </div>
 
 <div class="step" data-x="4000" data-y="0" id="step-3">
-  page 1
-</div>
 
-<div class="step" data-x="6000" data-y="0" id="step-4">
-  page 2
-</div>
+  page 2 - Table
 
-<div class="step" data-x="8000" data-y="0" id="step-5">
-  page 3
-</div>
+  <div class= "tbody">
 
-<div class="step" data-x="10000" data-y="0" id="step-6">
-  page 4
-</div>
-
-<div class="step" data-x="12000" data-y="0" id="step-7">
-  page 5
-</div>
-
-  <!-- <p id="chart"></p> -->
-
-  <!-- <div class= "tbody">
     <table>
       <tr>
         <th>Question</th>
@@ -52,4 +43,19 @@ layout: default
       </tr>
     </table>
 
-  </div> -->
+  </div>
+
+</div>
+
+<div class="step" data-x="6000" data-y="0" id="step-4">
+  page 3 - Line Chart
+</div>
+
+<div class="step" data-x="8000" data-y="0" id="step-5">
+  page 4 - Pie Chart
+</div>
+
+<div class="step" data-x="10000" data-y="0" id="step-6">
+  page 5 - Stacked Bar Chart
+</div>
+  </div>
