--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,12 @@ layout: default
 </div>
 
 <div class="step" data-x="6000" data-y="0" id="step-4">
+<div id='lineChart'>
   page 3 - Line Chart
+</div>
+
+
+
 </div>
 
 <div class="step" data-x="8000" data-y="0" id="step-5">
