Dropdown and Cover Page are ready

--- a/app/index.html
+++ b/app/index.html
@@ -3,23 +3,27 @@ layout: default
 ---
 
 
-<div class="step" data-x="0" data-y="0" id="step-1">
-    Select Report By Month:
-    
+<div class="step" data-x="0" data-y="0" id="dropdown">
+  <select class="dropdown"></select>
+</div>
+
+<div class="step" data-x="2000" data-y="0" id="coverpage">
+  <div class="coverpage-reportdate">
+    Management Information
     <div>
-      <select>
-        <option>test</option>
-        <option>test 2</option>
-      </select>
+      <span></span>
     </div>
-
+  </div>
+  <div class="coverpage-dateexported">
+    
+  <div>
+    Exported:
+  </div>
+    <span></span>
+  </div>
 </div>
 
-<div class="step" data-x="2000" data-y="0" id="step-2">
-  cover page
-</div>
-
-<div class="step" data-x="4000" data-y="0" id="step-3">
+<div class="step" data-x="4000" data-y="0" id="page-2">
 
   page 2 - Table
 
@@ -47,7 +51,7 @@ layout: default
 
 </div>
 
-<div class="step" data-x="6000" data-y="0" id="step-4">
+<div class="step" data-x="6000" data-y="0" id="page-3">
 <div id='lineChart'>
   page 3 - Line Chart
 </div>
@@ -56,11 +60,11 @@ layout: default
 
 </div>
 
-<div class="step" data-x="8000" data-y="0" id="step-5">
+<div class="step" data-x="8000" data-y="0" id="page-4">
   page 4 - Pie Chart
 </div>
 
-<div class="step" data-x="10000" data-y="0" id="step-6">
+<div class="step" data-x="10000" data-y="0" id="page-5">
   page 5 - Stacked Bar Chart
 </div>
   </div>
