Working on Page2 table

--- a/app/index.html
+++ b/app/index.html
@@ -24,149 +24,80 @@ layout: default
 </div>
 
 <div class="step" data-x="4000" data-y="0" id="page-2">
+    <div class="page2-previousyear">
+        <table class="pure-table">
+            <thead></thead>
+        </table>
+    </div>
 
-  page 2 - Table
+    <div>
+        <table class="pure-table">
+            <thead>
+                <tr>
+                    <th></th>
+                    </tr>
+            </thead>
 
-  <div class="table-wrap">
-    <table class="pure-table">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Make</th>
-            <th>Model</th>
-            <th>Year</th>
-        </tr>
-    </thead>
-
-    <tbody>
+        <tbody>
         <tr class="pure-table-odd">
-            <td>1</td>
-            <td>Honda</td>
-            <td>Accord</td>
-            <td>2009</td>
+        <td>1</td>
+        <td>Honda</td>
+        <td>Accord</td>
+        <td>2009</td>
         </tr>
 
         <tr>
-            <td>2</td>
-            <td>Toyota</td>
-            <td>Camry</td>
-            <td>2012</td>
-        </tr>
-
-        <tr class="pure-table-odd">
-            <td>3</td>
-            <td>Hyundai</td>
-            <td>Elantra</td>
-            <td>2010</td>
-        </tr>
-
-        <tr>
-            <td>4</td>
-            <td>Ford</td>
-            <td>Focus</td>
-            <td>2008</td>
+        <td>2</td>
+        <td>Toyota</td>
+        <td>Camry</td>
+        <td>2012</td>
         </tr>
 
         <tr class="pure-table-odd">
-            <td>5</td>
-            <td>Nissan</td>
-            <td>Sentra</td>
-            <td>2011</td>
+        <td>3</td>
+        <td>Hyundai</td>
+        <td>Elantra</td>
+        <td>2010</td>
         </tr>
 
         <tr>
-            <td>6</td>
-            <td>BMW</td>
-            <td>M3</td>
-            <td>2009</td>
+        <td>4</td>
+        <td>Ford</td>
+        <td>Focus</td>
+        <td>2008</td>
         </tr>
 
         <tr class="pure-table-odd">
-            <td>7</td>
-            <td>Honda</td>
-            <td>Civic</td>
-            <td>2010</td>
+        <td>5</td>
+        <td>Nissan</td>
+        <td>Sentra</td>
+        <td>2011</td>
         </tr>
 
         <tr>
-            <td>8</td>
-            <td>Kia</td>
-            <td>Soul</td>
-            <td>2010</td>
-        </tr>
-    </tbody>
-</table>
-
-<table class="pure-table">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Make</th>
-            <th>Model</th>
-            <th>Year</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        <tr class="pure-table-odd">
-            <td>1</td>
-            <td>Honda</td>
-            <td>Accord</td>
-            <td>2009</td>
-        </tr>
-
-        <tr>
-            <td>2</td>
-            <td>Toyota</td>
-            <td>Camry</td>
-            <td>2012</td>
+        <td>6</td>
+        <td>BMW</td>
+        <td>M3</td>
+        <td>2009</td>
         </tr>
 
         <tr class="pure-table-odd">
-            <td>3</td>
-            <td>Hyundai</td>
-            <td>Elantra</td>
-            <td>2010</td>
+        <td>7</td>
+        <td>Honda</td>
+        <td>Civic</td>
+        <td>2010</td>
         </tr>
 
         <tr>
-            <td>4</td>
-            <td>Ford</td>
-            <td>Focus</td>
-            <td>2008</td>
+        <td>8</td>
+        <td>Kia</td>
+        <td>Soul</td>
+        <td>2010</td>
         </tr>
+        </tbody>
+        </table>
 
-        <tr class="pure-table-odd">
-            <td>5</td>
-            <td>Nissan</td>
-            <td>Sentra</td>
-            <td>2011</td>
-        </tr>
-
-        <tr>
-            <td>6</td>
-            <td>BMW</td>
-            <td>M3</td>
-            <td>2009</td>
-        </tr>
-
-        <tr class="pure-table-odd">
-            <td>7</td>
-            <td>Honda</td>
-            <td>Civic</td>
-            <td>2010</td>
-        </tr>
-
-        <tr>
-            <td>8</td>
-            <td>Kia</td>
-            <td>Soul</td>
-            <td>2010</td>
-        </tr>
-    </tbody>
-</table>
-</div>
-
+    </div>
 </div>
 
 <div class="step" data-x="6000" data-y="0" id="page-3">
