--- a/app/index.html
+++ b/app/index.html
@@ -8,96 +8,55 @@ layout: default
 </div>
 
 <div class="step" data-x="2000" data-y="0" id="coverpage">
+
   <div class="coverpage-reportdate">
-    Management Information
-    <div>
-      <span></span>
-    </div>
-  </div>
-  <div class="coverpage-dateexported">
-    
-  <div>
-    Exported:
-  </div>
+    <div>Management Information</div>
     <span></span>
+  </div>
+
+  <div class="coverpage-dateexported">
+    Exported: <span></span>
   </div>
 </div>
 
 <div class="step" data-x="4000" data-y="0" id="page-2">
-    <div class="page2-previousyear">
-        <table class="pure-table">
-            <thead></thead>
-        </table>
-    </div>
+  <div class="previousyear half">
 
-    <div>
-        <table class="pure-table">
-            <thead>
-                <tr>
-                    <th></th>
-                    </tr>
-            </thead>
-
-        <tbody>
-        <tr class="pure-table-odd">
-        <td>1</td>
-        <td>Honda</td>
-        <td>Accord</td>
-        <td>2009</td>
-        </tr>
-
+    <table class="table table-striped">
+      <thead>
         <tr>
-        <td>2</td>
-        <td>Toyota</td>
-        <td>Camry</td>
-        <td>2012</td>
+          <th scope="col" colspan="3"></th>
         </tr>
+      </thead>
+      <tfoot>
+      <tr>
+        <td>Total:</td>
+        <td colspan="2" class="table-total"></td>
+      </tr>
+      </tfoot>
+      <tbody></tbody>
+    </table>
 
-        <tr class="pure-table-odd">
-        <td>3</td>
-        <td>Hyundai</td>
-        <td>Elantra</td>
-        <td>2010</td>
-        </tr>
+  </div>
 
+  <div class="currentyear half">
+
+    <table  class="table table-striped">
+      <thead>
         <tr>
-        <td>4</td>
-        <td>Ford</td>
-        <td>Focus</td>
-        <td>2008</td>
+          <th scope="col" colspan="3"></th>
         </tr>
+      </thead>
+      <tfoot>
+      <tr>
+        <td>Total:</td>
+        <td colspan="2" class="table-total"></td>
+      </tr>
+      </tfoot>
+      <tbody></tbody>
+    </table>
 
-        <tr class="pure-table-odd">
-        <td>5</td>
-        <td>Nissan</td>
-        <td>Sentra</td>
-        <td>2011</td>
-        </tr>
-
-        <tr>
-        <td>6</td>
-        <td>BMW</td>
-        <td>M3</td>
-        <td>2009</td>
-        </tr>
-
-        <tr class="pure-table-odd">
-        <td>7</td>
-        <td>Honda</td>
-        <td>Civic</td>
-        <td>2010</td>
-        </tr>
-
-        <tr>
-        <td>8</td>
-        <td>Kia</td>
-        <td>Soul</td>
-        <td>2010</td>
-        </tr>
-        </tbody>
-        </table>
-
-    </div>
+  </div>
 </div>
 
 <div class="step" data-x="6000" data-y="0" id="page-3">
