--- a/app/index.html
+++ b/app/index.html
@@ -22,50 +22,51 @@ layout: default
 <div class="step" data-x="4000" data-y="0" id="page-2">
   <div class="previousyear half">
 
-    <table class="table table-striped">
-      <thead>
+    <div class="padded">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col" colspan="3"></th>
+          </tr>
+        </thead>
+        <tfoot>
         <tr>
-          <th scope="col" colspan="3"></th>
+          <td>Total:</td>
+          <td colspan="2" class="table-total"></td>
         </tr>
-      </thead>
-      <tfoot>
-      <tr>
-        <td>Total:</td>
-        <td colspan="2" class="table-total"></td>
-      </tr>
-      </tfoot>
-      <tbody></tbody>
-    </table>
+        </tfoot>
+        <tbody></tbody>
+      </table>
+    </div>
 
   </div>
 
   <div class="currentyear half">
 
-    <table  class="table table-striped">
-      <thead>
+    <div class="padded">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col" colspan="3"></th>
+          </tr>
+        </thead>
+        <tfoot>
         <tr>
-          <th scope="col" colspan="3"></th>
+          <td>Total:</td>
+          <td colspan="2" class="table-total"></td>
         </tr>
-      </thead>
-      <tfoot>
-      <tr>
-        <td>Total:</td>
-        <td colspan="2" class="table-total"></td>
-      </tr>
-      </tfoot>
-      <tbody></tbody>
-    </table>
+        </tfoot>
+        <tbody></tbody>
+      </table>
+    </div>
 
   </div>
 </div>
 
 <div class="step" data-x="6000" data-y="0" id="page-3">
-<div id='lineChart'>
-  page 3 - Line Chart
-</div>
-
-
-
+  <div id='lineChart'>
+    page 3 - Line Chart
+  </div>
 </div>
 
 <div class="step" data-x="8000" data-y="0" id="page-4">
@@ -75,4 +76,3 @@ layout: default
 <div class="step" data-x="10000" data-y="0" id="page-5">
   page 5 - Stacked Bar Chart
 </div>
-  </div>
