HTML finising toutches

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,9 @@ layout: default
 
 <div class="step" data-x="0" data-y="0" id="dropdown">
   <div class="relative select-wrap">
+    <div>
+      <h1>Customer Monthly Report</h1>      
+    </div>
     <select class="dropdown"></select>
     <span>&#x25BC;</span>
   </div>
@@ -14,6 +17,7 @@ layout: default
 
   <div class="coverpage-reportdate">
     <div>Management Information</div>
+    <img src="CustomerLogo">
     <span></span>
   </div>
 
@@ -23,6 +27,10 @@ layout: default
 </div>
 
 <div class="step" data-x="4000" data-y="0" id="page-2">
+  <div>
+    <h1>Summary...</h1>      
+  </div>
+
   <div class="previousyear half">
 
     <div class="padded">
