--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="step" data-x="0" data-y="0" id="dropdown">
   <div class="relative select-wrap">
-    <div class="pageTitle">
+    <div class="coverPageTitle">
       Customer Monthly Report
     </div>
     <select class="dropdown"></select>
@@ -14,7 +14,6 @@ layout: default
 </div>
 
 <div class="step" data-x="2000" data-y="0" id="coverpage">
-
   <div class="coverpage-reportdate">
     <div class"logo">
       <img src="..\img\logo.png" alt="Customer Logo" height="200" width="200">
@@ -31,8 +30,8 @@ layout: default
 </div>
 
 <div class="step" data-x="4000" data-y="0" id="page-2">
-  <div class="page2Title">
-    <h1>Assignment Volume Summary</h1>      
+  <div class="pageTitle">
+    Assignment Volume Summary
   </div>
 
   <div class="previousyear half">
@@ -79,18 +78,22 @@ layout: default
 </div>
 
 <div class="step" data-x="6000" data-y="0" id="page-3">
-  <div class="page3Title">
-    Line Chart
+  <div class="pageTitle">
+  Volume Summary
   </div>
   <div id="page-3-line-chart"></div>
 </div>
 
 <div class="step" data-x="8000" data-y="0" id="page-7">
-  Pie Chart
+    <div class="pageTitle">
+    Assignment Closure Summary
+  </div>
   <div id="page-7-pie-chart"></div>
 </div>
 
 <div class="step" data-x="10000" data-y="0" id="page-8">
-  Stacked Bar Chart
+  <div class="page3Title">
+    Closed vs Open Files
+  </div>
   <div id="page-8-bar-chart"></div>
 </div>
