--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@ layout: default
 </div>
 
 <div class="step" data-x="10000" data-y="0" id="page-8">
-  <div class="page3Title">
+  <div class="pageTitle">
     Closed vs Open Files
   </div>
   <div id="page-8-bar-chart"></div>
