--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-
 <div class="step" data-x="0" data-y="0" id="dropdown">
   <div class="relative select-wrap">
     <div class="coverPageTitle">
@@ -15,9 +14,10 @@ layout: default
 
 <div class="step" data-x="2000" data-y="0" id="coverpage">
   <div class="coverpage-reportdate">
-    <div class"logo">
+    <div class="logo">
       <img src="..\img\logo.png" alt="Customer Logo" height="200" width="200">
     </div>
+
     <div class="coverPageTitle">Management Information</div>
     <div class="coverpage-reportdate">
       <span></span>
