--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@ layout: default
 <div class="step" data-x="2000" data-y="0" id="coverpage">
   <div class="coverpage-reportdate">
     <div class="logo">
-      <img src="..\img\logo.png" alt="Customer Logo" height="200" width="200">
+      <img src="img/logo.png" alt="Customer Logo" height="200" width="200">
     </div>
 
     <div class="coverPageTitle">Management Information</div>
