Fixed the dropdown arrow

--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,14 @@ layout: default
 ---
 
 <div class="step" data-x="0" data-y="0" id="dropdown">
+  
+  <div class="coverPageTitle">
+    Customer Monthly Report
+  </div>
+
   <div class="relative select-wrap">
-    <div class="coverPageTitle">
-      Customer Monthly Report
-    </div>
     <select class="dropdown"></select>
-    <span></span>
+    <span>&#x25BC;</span>
   </div>
 </div>
 
